--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,17 @@
 	padding: 5px;
 }
 
+#main-wrapper #add2_button {
+	background-color: #27ae60;
+	color: white;
+	margin: 10px auto;
+	padding: 10px;
+	text-align: center;
+	width: 60%;
+	font-size: 18px;
+	font-weight: bold;
+}
+
 #add_button {
 	background-color: #27ae60;
 	color: white;
